2008-04-03  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/35817
	* ira-costs.c (ira-costs.c): Check have_regs_of_mode.

2008-04-02  Vladimir Makarov  <vmakarov@redhat.com>

	* ira-color.c (start_allocno_priorities): Permit zero allocno
	nref.

2008-03-31  Vladimir Makarov  <vmakarov@redhat.com>

	* ira-color.c (push_allocnos_to_stack): Don't use double.  Use
	const as the secondary heuristic.

	* ira-emit.c (set_allocno_reg): Change cap reg too.  Process all
	loop parents.
	
	* doc/invoke.texi (-fira-coalescing): Change to -fira-coalesce.

	* toplev.h (flag_lower_subreg): Remove.

	* global.c (build_insn_chain): Remove the prototype.

	* alias.c (value_addr_p): Change comment.

	* emit-rtl.c (gen_lowpart_common): Remove CONCATN.

	* simplify-rtx.c (simplify_subreg): Ditto.

	* common.opt (flower-subreg): Remove.

	* config/rs6000/rs6000.c (rs6000_elf_in_small_data_p): Fix last
	merge.

2008-03-29  Vladimir Makarov  <vmakarov@redhat.com>

	* ira-lives (process_single_reg_class_operands): Fix typo in
	setting up cover_class.

2008-03-28  Vladimir Makarov  <vmakarov@redhat.com>

	* ira-conflicts.c, global.c, regmove.c, function.c,
	ira-emit.c, alias.c, reload1.c: Add comments, fix comments.

	* reload.h: Add 2008 to the Copyright.
	
	* caller-save.c: Add comments.
	(reg_save_code, reg_restore_code, initiate_saved_hard_regs,
	new_saved_hard_reg, finish_saved_hard_regs,
	saved_hard_reg_compare_func, calculate_local_save_info,
	set_up_bb_rts_numbers, rpost_cmp, calculate_save_in_out,
	calculate_save_here, make_global_save_analysis,
	print_hard_reg_set_and_mode, print_hard_reg_set, print_save_data,
	set_hard_reg_saved, add_stored_regs): Add prototypes.
	
	* df-scan.c (df_get_call_refs): Use
	get_call_invalidated_used_regs.

	* ira-int.h: Add comments.
	(loop_tree_node): Rename inner to children.
	(ira_allocate_regset, ira_free_regset): Remove.
	(reassign_conflict_allocnos): Remove one parameter.

	* ira-color.c: Add comments.